# xplane12api

./: .gitignore  README.md
web/: README.md
web/xplane12/: dashboard.js  index.html  styles.css
xplane12/: __init__.py  weather&traffic radars reference.md
xplane12/api/: live_capture.py  plugin_artifacts.py  rendering.py  server.py
xplane12/autopilot/: __init__.py  controller.py
xplane12/bridge/: __init__.py  webapi_client.py
xplane12/compat/: __init__.py  legacy_categories.py
xplane12/host/: xplane12_data_api.py  xplane12_web_autoflight.py  xplane_remote_relay.py
xplane12/host/env/: xplane12.env.example
xplane12/host/systemd/: xplane-49013-tunnel.service  xplane12-autoflight.service  xplane12-data-api.service  xplane12-restart.service  xplane12-restart.timer  xplane12-simulator.service  xplane12-tunnel.service
xplane12/host/tests/: test_api_server.py  test_autoflight_recovery.py  test_xplane12_web_autoflight.py  test_xplane_remote_relay.py
xplane12/host/tools/: install_xplane12_4090_host.sh  logs_xplane12_4090_host.sh  restart_xplane12_4090_host.sh  run_xplane12_4090_diag.sh  start_xplane12_autopilot.sh
xplane12/models/: __init__.py  snapshot.py
xplane12/plugin/: CMakeLists.txt  XPlane12ImageBridge.cpp
xplane12/stream/: __init__.py  ndjson_server.py
